--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
         },false);
         console.log(document.getElementById("div"+i));
     }
-    console.log("test");
+    console.log("test22");
 </script>
 </html>
